# slc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: component.rs  definitions.rs  lib.rs  main.rs  project.rs  render_template.py  sdk.rs
tests/: cli.rs  generation.rs  instantiable.rs  parsing.rs  real_sdk.rs  resolution.rs
tests/common/: mod.rs
