[package]
name = "slcgen"
version = "0.1.0"
edition = "2021"

# The crate publishes as `slcgen`, but the binary and library keep the `slc`
# name so the command stays `slc` and internal `slc::` imports are unchanged.
[[bin]]
name = "slc"
path = "src/main.rs"

[lib]
name = "slc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = "2"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"

[dev-dependencies]
tempfile = "3.27.0"
